
syntax = "proto3";

package pb;

import "google/protobuf/timestamp.proto";

option go_package = "barbershop/src/pb/barber";


message UpdateBarberShopServiceRequest{
    string id = 1;
    string barber_shop_id = 2;
    optional int32 gender_id = 3;
    optional string name = 4;
    optional int32 timer = 5;
    optional float price = 6;
    optional string description = 7;
    optional string image_url = 8;
    optional bool is_active = 9;
    optional int32 category_id = 10;
    repeated string combo_services = 11;
    optional float discount_price = 12;
    optional google.protobuf.Timestamp discount_start_time = 13;
    optional google.protobuf.Timestamp discount_end_time = 14;
}

message UpdateBarberShopServiceResponse{
    string message = 1;
}